Amazon Connector/src/objects/Credentials__c.object
<CustomObject>
    <fields>
        <fullName>BucketName__c</fullName>
        <label>BucketName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credentials__c</fullName>
        <label>Credentials</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipName>Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber</label>
        <referenceTo>Subscriber__c</referenceTo>
        <relationshipName>Credentials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <referenceTo>System__c</referenceTo>
        <relationshipName>Credentials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>S3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SNS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>ENS_Credentials</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Credentials Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ENS_Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>